# changetext.dll

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.legacy  README.md  bitbucket-pipelines.yml  changetext.bat  changetext.c  changetext.h  changetext.py  changetext32-dll.cmake  changetext64-dll.cmake  compile_changetext.bat  compile_changetext.sh  compile_fake_ttf.sh  test.c  test.cpp  test_so.py
.github/workflows/: build.yml  test.yml
sources/: changetext.c  changetext.h
